# tldr-man

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  generate_completions.sh  pyproject.toml  tldr-man.1
src/tldr_man/: __init__.py  __main__.py  color.py  errors.py  languages.py  main.py  pages.py  platforms.py  shell_completion.py  temp_path.py  util.py
