[tool.poetry]
name = "tldr-man"
version = "1.0.3"
description = "Command-line TLDR client that displays tldr-pages as manpages"
license = 'Apache-2.0'
readme = "README.md"
authors = ["Ethan Kinnear <contact@superatomic.dev>"]
homepage = 'https://tldr-man.superatomic.dev/'
repository = 'https://github.com/superatomic/tldr-man-client'
documentation = 'https://github.com/superatomic/tldr-man-client#readme'
keywords = ['tldr', 'tldr-pages', 'man', 'manpage', 'tldr-client']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX :: SunOS/Solaris',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Unix Shell',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Topic :: Utilities',
]
include = ["generate_completions.sh"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/superatomic/tldr-man-client/issues"
"Say Thanks!" = "https://saythanks.io/to/superatomic"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
click-help-colors = "^0.9.1"
xdg = "^5.1.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tldr = "tldr_man:cli"
tldr-man = "tldr_man:cli"
